fix(Search): Fix search functionality in Orders to include product names using a 2-step Supabase query

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@supabase/supabase-js": "^2.95.3",
+    "@supabase/supabase-js": "^2.98.0",
+    "dotenv": "^17.3.1",
     "lucide-react": "^0.563.0",
+    "playwright": "^1.58.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
